Make `PhoneNumberIdentifiers` operations asynchronous